[gd_scene load_steps=16 format=2]

[ext_resource path="res://TestZone/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://Elements/Universe/PlanetCreator.gd" type="Script" id=2]
[ext_resource path="res://Ressources/BgTexture.png" type="Texture" id=3]
[ext_resource path="res://Ressources/Music/MusicBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Elements/Sun/Sun.tscn" type="PackedScene" id=5]
[ext_resource path="res://Controls/CreationBoard/CreationBoard.tscn" type="PackedScene" id=6]
[ext_resource path="res://Elements/UI/Scanlines/ScanLines.tscn" type="PackedScene" id=7]
[ext_resource path="res://Controls/MovementBoard/MovementBoard.tscn" type="PackedScene" id=8]
[ext_resource path="res://Elements/UI/SelectedWell/SelectedWell.tscn" type="PackedScene" id=9]
[ext_resource path="res://Elements/UI/DisplayShot/DisplayShot.tscn" type="PackedScene" id=10]
[ext_resource path="res://Controls/Tutorial/Tutorial.tscn" type="PackedScene" id=11]
[ext_resource path="res://Ressources/Pixel LCD-7.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Elements/Universe/Money.gd" type="Script" id=13]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 0.9
glow_strength = 0.66
glow_blend_mode = 1
glow_hdr_threshold = 0.04
glow_hdr_luminance_cap = 0.69
glow_hdr_scale = 2.43

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 12 )

[node name="Universe" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 544.0, 544.0 ],
"_edit_vertical_guides_": [ 960.0, 1856.0, 1304.0 ]
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960.241, 542.408 )
current = true
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="DisplayShot" parent="." instance=ExtResource( 10 )]

[node name="CreationBoard" parent="." instance=ExtResource( 6 )]

[node name="MovementBoard" parent="." instance=ExtResource( 8 )]

[node name="SelectedGravWell" parent="." instance=ExtResource( 9 )]
z_index = 3

[node name="Sun" parent="." groups=[
"DefaultWell",
] instance=ExtResource( 5 )]
position = Vector2( 960, 544 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="ScanLines" parent="." instance=ExtResource( 7 )]

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 4 )]
stream = null
volume_db = -72.706
autoplay = false

[node name="MusicControl" type="CanvasLayer" parent="."]

[node name="BgTexture" type="Sprite" parent="MusicControl"]
position = Vector2( 1568, -26 )
scale = Vector2( 0.242188, 0.113281 )
texture = ExtResource( 3 )

[node name="HSlider" type="HSlider" parent="MusicControl" groups=[
"SoundLevel",
]]
margin_left = 1464.0
margin_top = 4.0
margin_right = 1672.0
margin_bottom = 28.0
min_value = -20.0
max_value = 0.0
value = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" parent="." instance=ExtResource( 11 )]

[node name="MoneyDisplay" type="CanvasLayer" parent="."]

[node name="Money" type="Label" parent="MoneyDisplay"]
margin_left = 728.0
margin_top = 14.0
margin_right = 1024.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 5, 0, 1 )
text = "65321356$"
align = 2
valign = 1
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="MoneyDisplay"]
position = Vector2( 880, -48 )
scale = Vector2( 0.328125, 0.238281 )
z_index = -2
texture = ExtResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="MoneyDisplay"]
z_index = -1
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 728, 8, 728, 56, 1032, 56, 1032, 30.6691, 1032, 8 )

[connection signal="createPlanet" from="CreationBoard" to="." method="_on_CreationBoard_createPlanet"]
[connection signal="destroy" from="CreationBoard" to="." method="_on_CreationBoard_destroy"]
[connection signal="launchProbe" from="CreationBoard" to="." method="_on_CreationBoard_launchProbe"]
[connection signal="nextWell" from="CreationBoard" to="." method="_on_CreationBoard_nextWell"]
[connection signal="previousWell" from="CreationBoard" to="." method="_on_CreationBoard_previousWell"]
